--- a/src/Template/cup/catalog/statistic.twig
+++ b/src/Template/cup/catalog/statistic.twig
@@ -18,7 +18,7 @@
                 <script>window.orders_revenue = {{ json_encode(orders_revenue) }};</script>
 
                 <div class="card-header">
-                    <div class="card-title">{{ 'Orders and Revenue Statistics'|locale }}</div>
+                    <div class="card-title">{{ 'Orders and Revenue'|locale }}</div>
                 </div>
                 <div class="card-body">
                     <canvas id="orders_revenue" height="250" style="display: block; width: 100%; height: 250px; max-height: 250px;"></canvas>
@@ -29,7 +29,7 @@
         <div class="col-12 col-md-6">
             <div class="card">
                 <div class="card-header">
-                    <div class="card-title">{{ 'Top 10 Sold Producs Statistics'|locale }}</div>
+                    <div class="card-title">{{ 'Top 10 Sold Producs'|locale }}</div>
                 </div>
                 <div class="card-body p-0">
                     <table class="table table-striped mb-0">
@@ -53,7 +53,7 @@
         <div class="col-12 col-md-6">
             <div class="card">
                 <div class="card-header">
-                    <div class="card-title">{{ 'Top 10 Buyers Statistics'|locale }}</div>
+                    <div class="card-title">{{ 'Top 10 Buyers'|locale }}</div>
                 </div>
                 <div class="card-body p-0">
                     <table class="table table-striped mb-0">
