rewrite auth with OAuth with strategy pattern

--- a/src/Template/cup/auth/login.twig
+++ b/src/Template/cup/auth/login.twig
@@ -25,8 +25,8 @@
                                 'name': 'password'
                             } %}
 
-                            <div class="form-group form-action-d-flex mb-3">
-                                <button class="btn btn-secondary col-md-5 float-right mt-3 mt-sm-0 fw-bold">{{ 'Sign In'|locale }}</button>
+                            <div class="form-group form-action-d-flex">
+                                <button class="btn w-100 btn-secondary">{{ 'Sign In'|locale }}</button>
                             </div>
                         </form>
                     </div>
