--- a/src/Template/cup/navigation.twig
+++ b/src/Template/cup/navigation.twig
@@ -279,7 +279,7 @@
         </li>
     {% else %}
         <li class="nav-item">
-            <a href="/user/logout">
+            <a href="/auth/logout?redirect=/cup">
                 <i class="fas fa-sign-out-alt"></i>
                 <p>{{ 'Exit'|locale }}</p>
             </a>
