--- a/src/Template/cup/toolbar.twig
+++ b/src/Template/cup/toolbar.twig
@@ -54,7 +54,7 @@
                     </li>
                     <li>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="/user/logout">{{ 'Exit'|locale }}</a>
+                        <a class="dropdown-item" href="/auth/logout?redirect=/cup">{{ 'Exit'|locale }}</a>
                     </li>
                 </div>
             </ul>
