fix system controller

--- a/src/Template/cup/system/index-step-1.twig
+++ b/src/Template/cup/system/index-step-1.twig
@@ -27,5 +27,5 @@
 </div>
 
 <div class="card-footer d-flex justify-content-center">
-    <a href="/cup/system/2" class="btn btn-primary">{{ 'Next'|locale }}</a>
+    <a href="/cup/system/2" class="btn btn-primary mx-1 w-100">{{ 'Next'|locale }}</a>
 </div>
