--- a/src/Template/cup/system/index-step-2.twig
+++ b/src/Template/cup/system/index-step-2.twig
@@ -45,6 +45,6 @@
 </div>
 
 <div class="card-footer d-flex justify-content-center">
-    <a href="/cup/system/1" class="btn btn-secondary">{{ 'Back'|locale }}</a>
-    <a href="/cup/system/3" class="btn btn-primary ml-1">{{ 'Next'|locale }}</a>
+    <a href="/cup/system/1" class="btn btn-secondary mx-1 w-25">{{ 'Back'|locale }}</a>
+    <a href="/cup/system/3" class="btn btn-primary mx-1 w-75">{{ 'Next'|locale }}</a>
 </div>
