fix show empty statistic

--- a/src/Template/cup/auth/forbidden.twig
+++ b/src/Template/cup/auth/forbidden.twig
@@ -16,7 +16,7 @@
             <div class="card">
                 <div class="card-body text-center">
                     <b>{{ 'You currently do not have access to the requested page!'|locale }}</b>
-                    <p class="mt-1">
+                    <p class="mt-2 mb-0">
                         {{ 'If you are sure that the address is typed correctly:'|locale }}<br>
                         &mdash; {{ 'check permissions'|locale }};<br>
                         &mdash; {{ 'contact the administrator'|locale }}.
