--- a/src/Template/cup/catalog/statistic.twig
+++ b/src/Template/cup/catalog/statistic.twig
@@ -30,7 +30,7 @@
             {% endif %}
 
             {% if top_products|count %}
-                <div class="col-12 col-md-6">
+                <div class="col-12 col-lg-6">
                     <div class="card">
                         <div class="card-header">
                             <div class="card-title">{{ 'Top 10 Sold Producs'|locale }}</div>
@@ -56,7 +56,7 @@
             {% endif %}
 
             {% if top_buyers|count %}
-                <div class="col-12 col-md-6">
+                <div class="col-12 col-lg-6">
                     <div class="card">
                         <div class="card-header">
                             <div class="card-title">{{ 'Top 10 Buyers'|locale }}</div>
