fix category edit form title

--- a/src/Template/cup/catalog/category/form.twig
+++ b/src/Template/cup/catalog/category/form.twig
@@ -4,7 +4,7 @@
     <div class="page-inner py-5">
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
             {% include 'cup/form-header.twig' with {
-                'item': category,
+                'item': item,
                 'create': 'Create a new category',
                 'update': 'Category editing'
             } only %}
