--- a/src/Template/cup/catalog/statistic.twig
+++ b/src/Template/cup/catalog/statistic.twig
@@ -33,7 +33,7 @@
                 <div class="col-12 col-lg-6">
                     <div class="card">
                         <div class="card-header">
-                            <div class="card-title">{{ 'Top 10 Sold Producs'|locale }}</div>
+                            <div class="card-title">{{ 'Top 10 Sold Products'|locale }}</div>
                         </div>
                         <div class="card-body p-0">
                             <table class="table table-striped mb-0">
