--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -312,7 +312,7 @@
                                                                         {% endif %}
                                                                         {% if stats.catalog.order %}
                                                                             <tr>
-                                                                                <th width="50%">{{ 'The number of orders'|locale }}:</th>
+                                                                                <th width="50%">{{ 'Number of orders'|locale }}:</th>
                                                                                 <td width="50%" class="text-center">{{ stats.catalog.order }}</td>
                                                                             </tr>
                                                                         {% endif %}
