--- a/src/Template/layout.twig
+++ b/src/Template/layout.twig
@@ -14,10 +14,9 @@
         {% block head '' %}
         {% block style '' %}
 
+        <title>{% block title deferred %}{{ title ? title ~ ' | ' : '' }}{{ parameter('common_title', '') }}{% endblock %}</title>
         <script defer type="text/javascript" src="/assets/js/wse.js?v={{ SHA }}"></script>
     </head>
-
-    <div>{% block title deferred %}{{ title ? title ~ ' | ' : '' }}{{ parameter('common_title', '') }}{% endblock %}</div>
 
     {% block body %}
         <body>
